syntax = "proto3";
option java_package = "com.support.meta.proto";
option java_outer_classname = "MetaProtos";
option java_generate_equals_and_hash = true;
package com.support.meta.proto;

// list
// read
// write
// delete
message MetaRequestProto{
  oneof Request{
    ListRequestProto list = 1;
    ReadRequestProto read = 2;
    ListKeyRequestProto listKey = 3;
    WriteRequestProto write = 4;
    DeleteRequestProto delete = 5;
  }
}

message MetaReplyProto{
  oneof Reply{
    ReplyProto base = 1;
    ListReplyProto list = 2;
    ListKeyReplyProto listKey = 3;
    ReadReplyProto read = 4;
  }
}

message ListKeyRequestProto{
  string store = 1;
  bytes prefix = 2;
}

message ListRequestProto{
  string store = 1;
  bytes prefix = 2;
}

message ReadRequestProto{
  string store = 1;
  bytes key = 2;
}

message WriteRequestProto{
  string store = 1;
  repeated Meta meta = 2;
}

message DeleteRequestProto{
  string store = 1;
  repeated bytes key = 2;
}

message Meta{
  bytes key = 1;
  bytes data = 2;
}

message ListReplyProto{
  ReplyProto reply = 1;
  repeated Meta metas = 2;
}

message ListKeyReplyProto{
  ReplyProto reply = 1;
  repeated string key = 2;
}

message ReadReplyProto{
  ReplyProto reply = 1;
  Meta meta = 2;
}

message ReplyProto{
  bool success = 1;
}